Changed asterisk contrast issue.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -272,7 +272,7 @@ form {
 }
 
 form span {
-    color: red;
+    color: black;
 }
 
 .submit {
